--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,19 +4,15 @@ layout: default
 
 <article class="post">
 
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title | escape }}</h1>
+  <div class="page-header">
+    <h1>{{ page.title | escape }}</h1>
     {% if page.description %}
-    <p class="post-description">{{ page.description }}</p>
+    <p class="description">{{ page.description }}</p>
     {% endif %}
-  </header>
+  </div>
 
   <div class="post-content">
     {{ content }}
-  </div>
-
-  <div class="post-navigation">
-    <a href="{{ '/' | relative_url }}" class="back-link">← Back to Home</a>
   </div>
 
 </article>
